/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    `maven-publish`
    kotlin("jvm") version "2.2.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://jogamp.org/deployment/maven/")
    }

    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
    mavenCentral()
}

sourceSets {
    main {
        resources {
            srcDirs("src/main/java", "src/main/resources")
            exclude("**/*.java")
        }
    }
}

dependencies {
    api(libs.commons.codec.commons.codec)
    api(libs.commons.io.commons.io)
    api(libs.commons.logging.commons.logging)
    api(libs.org.apache.httpcomponents.httpclient)
    api(libs.org.apache.httpcomponents.httpcore)
    api(libs.org.apache.httpcomponents.httpmime)
    api(libs.org.jcodec.jcodec)
    api(libs.org.jcodec.jcodec.javase)
    api(libs.com.google.api.client.google.api.client)
    api(libs.com.google.http.client.google.http.client)
    api(libs.org.json.json)
    api(libs.com.googlecode.soundlibs.tritonus.share)
    api(libs.com.googlecode.soundlibs.vorbisspi)
    api(libs.org.jogamp.jogl.jogl.all)
    api(libs.org.jogamp.gluegen.gluegen.rt)
    api(libs.org.jogamp.jogl.jogl.all.main)
    api(libs.org.jogamp.gluegen.gluegen.rt.main)
    api(libs.com.google.apis.google.api.services.drive)
    api(libs.com.google.oauth.client.google.oauth.client.jetty)
    api(libs.com.google.code.gson.gson)
    api(libs.org.jetbrains.kotlin.kotlin.stdlib.jdk8)
    testImplementation(libs.org.jetbrains.kotlin.kotlin.test)
}

group = "com.battlecatsultimate"
version = "0.0.1-SNAPSHOT"
description = "BCU-java-PC"

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.release = 21
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

kotlin {
    jvmToolchain(21)
}